# farm

./: .editorconfig  .eslintignore  .eslintrc.base.json  .gitattributes  .gitignore  .gitmodules  .npmrc  .pnpmfile.cjs  .prettierrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  CONTRIBUTION.md  CONTRIBUTION.zh-CN.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  TODO.txt  biome.json  cspell.json  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml  rust-toolchain.toml  rustfmt.toml  skills-lock.json  tsconfig.base.json  vercel.json  vitest.config.e2e.ts  vitest.config.ts  vitest.workspace.ts
bench/: CHANGELOG.md  Cargo.toml  build.bench.ts  config.bench.ts  fibo.bench.ts  package.json  utils.ts  vitest.config.mts
bench/benches/: arco.bench.ts  compiler.rs  example.bench.ts
bench/benches/fixtures/vanilla/: farm.config.ts  index.html
crates/bench/: CHANGELOG.md  Cargo.toml
crates/bench/benches/: compiler_bench.rs  index.ts
crates/benches/: Cargo.toml
crates/benches/benches/: compiler.rs
crates/benches/src/: lib.rs
crates/compiler/: CHANGELOG.md  Cargo.toml
crates/compiler/examples/: module_graph.rs  react.rs  react_update.rs  script_entry.rs
crates/compiler/src/: lib.rs  trace_module_graph.rs  utils.rs
crates/compiler/src/generate/: finalize_resources.rs  merge_modules.rs  mod.rs  partial_bundling.rs  render_resource_pots.rs  resource_cache.rs  write_resources.rs
crates/compiler/src/update/: diff_and_patch_module_graph.rs  diff_module_graph.rs  finalize_module_graph.rs  find_hmr_boundaries.rs  handle_update_modules.rs  mod.rs  module_cache.rs  patch_module_group_graph.rs  patch_module_group_map.rs  regenerate_resources.rs  update_context.rs
crates/compiler/tests/: bundle.rs  concatenate_module.rs  css.rs  css_modules.rs  external.rs  library.rs  mangle_exports.rs  minify.rs  partial_bundling.rs  public_dir.rs  runtime.rs  script.rs  tree_shake.rs  update.rs
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core/src/: lib.rs
crates/create-farm-rs/: CHANGELOG.md  Cargo.toml  Readme.md
crates/create-farm-rs/src/: args.rs  lang.rs  lib.rs  main.rs  package_manager.rs  template.rs
crates/macro_cache_item/: CHANGELOG.md  Cargo.toml
crates/macro_cache_item/src/: common.rs  lib.rs
crates/macro_plugin/: CHANGELOG.md  Cargo.toml  README.md
crates/macro_plugin/src/: lib.rs
crates/macro_testing/: CHANGELOG.md  Cargo.toml
crates/macro_testing/src/: lib.rs
crates/node/: Cargo.toml  build.rs
crates/node/src/: file_watcher.rs  lib.rs  module_runner_transform.rs  profile_gui.rs
crates/plugin_bundle/: CHANGELOG.md  Cargo.toml
crates/plugin_bundle/src/: lib.rs
crates/plugin_css/: CHANGELOG.md  Cargo.toml
crates/plugin_css/src/: dep_analyzer.rs  lib.rs  source_replacer.rs  transform_css_to_script.rs  transform_resource_pot.rs
crates/plugin_css/tests/: analyze_deps.rs
crates/plugin_define/: CHANGELOG.md  Cargo.toml
crates/plugin_define/src/: lib.rs
crates/plugin_file_size/: CHANGELOG.md  Cargo.toml
crates/plugin_file_size/src/: lib.rs
crates/plugin_html/: CHANGELOG.md  Cargo.toml
crates/plugin_html/src/: absolute_path_handler.rs  deps_analyzer.rs  lib.rs  resources_injector.rs  utils.rs
crates/plugin_html/tests/: mod.rs
crates/plugin_json/: CHANGELOG.md  Cargo.toml
crates/plugin_json/src/: lib.rs
crates/plugin_json/tests/: load.rs  transform.rs
crates/plugin_lazy_compilation/: CHANGELOG.md  Cargo.toml
crates/plugin_lazy_compilation/src/: dynamic_module.ts  lib.rs
crates/plugin_library/: CHANGELOG.md  Cargo.toml
crates/plugin_library/src/: handle_exports.rs  import_meta_visitor.rs  lib.rs  transform_cjs.rs  transform_hybrid.rs  utils.rs
crates/plugin_lightningcss/: CHANGELOG.md  Cargo.toml
crates/plugin_lightningcss/src/: lib.rs  parse.rs  source_replacer.rs  transform_css_to_script.rs
crates/plugin_mangle_exports/: CHANGELOG.md  Cargo.toml
crates/plugin_mangle_exports/src/: ident_generator.rs  lib.rs  mangle_exports.rs  utils.rs
crates/plugin_minify/: CHANGELOG.md  Cargo.toml
crates/plugin_minify/src/: exports_minifier.rs  ident_generator.rs  imports_minifier.rs  lib.rs  minify_resource_pot.rs  top_level_idents_collector.rs  util.rs
crates/plugin_partial_bundling/: CHANGELOG.md  Cargo.toml
crates/plugin_partial_bundling/src/: analyze_module_graph.rs  generate_module_buckets.rs  generate_module_pots.rs  generate_resource_pots.rs  lib.rs  merge_module_pots.rs  module_bucket.rs  module_pot.rs  resource_group.rs  split_resource_unit.rs  utils.rs
crates/plugin_partial_bundling/tests/: module_group_graph.rs
crates/plugin_progress/: CHANGELOG.md  Cargo.toml
crates/plugin_progress/src/: lib.rs
crates/plugin_react/: Cargo.toml  package.json
crates/plugin_react/src/: lib.rs  react_refresh.rs
crates/plugin_resolve/: CHANGELOG.md  Cargo.toml
crates/plugin_resolve/src/: lib.rs  resolver.rs  resolver2.rs
crates/plugin_resolve/tests/: basic.rs  browser.rs  exports.rs  imports.rs  mod.rs  side_effects.rs  try_prefix.rs
crates/plugin_runtime/: CHANGELOG.md  Cargo.toml
crates/plugin_runtime/src/: find_async_modules.rs  handle_entry_resources.rs  handle_runtime_modules.rs  handle_runtime_plugins.rs  import_meta_visitor.rs  insert_runtime_modules.rs  insert_runtime_plugins.rs  lib.rs  parse.rs
crates/plugin_runtime/tests/: esm_to_farm_module.rs  hmr_accepted.rs
crates/plugin_script/: CHANGELOG.md  Cargo.toml
crates/plugin_script/src/: deps_analyzer.rs  features_analyzer.rs  find_async_modules.rs  handle_entry_resources.rs  import_meta_visitor.rs  lib.rs  swc_plugins.rs  swc_script_transforms.rs
crates/plugin_script/tests/: analyze_deps.rs  hmr_accepted.rs  mod.rs  module_system.rs
crates/plugin_script_meta/: CHANGELOG.md  Cargo.toml
crates/plugin_script_meta/src/: features.rs  features_analyzer.rs  find_async_modules.rs  lib.rs  plugin_exports.rs  plugin_features.rs
crates/plugin_static_assets/: CHANGELOG.md  Cargo.toml
crates/plugin_static_assets/src/: lib.rs
(+5109 files in other folders)
