[workspace]
members = ["crates/*", "packages/create-farm", "rust-plugins/*"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://farmfe.org"
license = "MIT"
repository = "https://github.com/farm-fe/farm"

[workspace.dependencies]
rkyv = "0.8.10"
enhanced-magic-string = "0.1.0"
sourcemap = "9.2.2"
bytes = "1.10.1"
bytes-str = "0.2.7"

[profile.release-publish]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
panic = "abort"

[profile.ci-test]
inherits = "release"
# opt-level = 0
# debug = 2
# lto = false
# codegen-units = 16
