[workspace]
members = ["crates/*", "packages/create-farm", "rust-plugins/*"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://farmfe.org"
license = "MIT"
repository = "https://github.com/farm-fe/farm"

[workspace.dependencies]
rkyv = "0.8.10"
enhanced-magic-string = "0.1.0"
sourcemap = "9.2.2"
bytes = "1.10.1"
bytes-str = "0.2.7"
swc_atoms = "9.0.0"
swc_common = "19.0.0"
swc_css_ast = "19.0.0"
swc_css_codegen = "19.0.0"
swc_css_minifier = "19.0.0"
swc_css_modules = "19.0.0"
swc_css_parser = "19.0.0"
swc_css_prefixer = "23.0.0"
swc_css_visit = "19.0.0"
swc_ecma_ast = "21.0.0"
swc_ecma_codegen = "24.0.0"
swc_ecma_loader = "19.0.0"
swc_ecma_minifier = "47.0.0"
swc_ecma_parser = "36.0.0"
swc_ecma_preset_env = "50.0.0"
swc_ecma_transforms = "49.0.0"
swc_ecma_transforms_base = "39.0.0"
swc_ecma_utils = "27.0.0"
swc_ecma_visit = "21.0.0"
swc_error_reporters = "21.0.0"
swc_html_ast = "19.0.0"
swc_html_codegen = "20.0.0"
swc_html_minifier = "47.0.0"
swc_html_parser = "19.0.0"
swc_html_visit = "19.0.0"
swc_plugin_backend_wasmer = "8.0.0"
swc_plugin_proxy = "21.0.0"
swc_plugin_runner = "25.0.0"
swc_sourcemap = "10.0.2"
swc_typescript = "26.0.0"

[profile.release-publish]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
panic = "abort"

[profile.ci-test]
inherits = "release"
# opt-level = 0
# debug = 2
# lto = false
# codegen-units = 16
