[workspace]
members = ["crates/*", "packages/create-farm", "rust-plugins/*", "rust-ecosystem/*"]
resolver = "2"

[workspace.package]
edition = "2024"
homepage = "https://farmfe.org"
license = "MIT"
repository = "https://github.com/farm-fe/farm"

[workspace.dependencies]
rkyv = "0.8.10"
enhanced-magic-string = "0.1.0"
sourcemap = "9.2.2"
bytes = "1.10.1"
bytes-str = "0.2.7"
swc_atoms = "9.0.0"
swc_common = "21.0.1"
swc_css_ast = "21.0.0"
swc_css_codegen = "21.0.0"
swc_css_minifier = "21.0.0"
swc_css_modules = "21.0.0"
swc_css_parser = "21.0.0"
swc_css_prefixer = "25.0.0"
swc_css_visit = "21.0.0"
swc_ecma_ast = "23.0.0"
swc_ecma_codegen = "26.0.1"
swc_ecma_loader = "21.0.0"
swc_ecma_minifier = "52.0.4"
swc_ecma_parser = "39.0.2"
swc_ecma_preset_env = "53.0.0"
swc_ecma_transforms = "52.0.0"
swc_ecma_transforms_base = "42.0.0"
swc_ecma_utils = "29.1.0"
swc_ecma_visit = "23.0.0"
swc_error_reporters = "23.0.0"
swc_html_ast = "21.0.0"
swc_html_codegen = "22.0.0"
swc_html_minifier = "52.0.0"
swc_html_parser = "21.0.0"
swc_html_visit = "21.0.0"
swc_plugin_backend_wasmer = "10.0.0"
swc_plugin_proxy = "23.0.0"
swc_plugin_runner = "27.0.0"
swc_sourcemap = "10.0.2"
swc_typescript = "28.0.0"

[profile.release-publish]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
panic = "abort"

[profile.ci]
inherits = "release"
lto = false
codegen-units = 16
debug = false
strip = "debuginfo"

[profile.ci-test]
inherits = "release"
# opt-level = 0
# debug = 2
# lto = false
# codegen-units = 16

# Patch serde to provide backward-compatible `__private` module alias.
# Some transitive deps still reference `serde::__private` (renamed to
# `serde::__private<version>` in serde 1.0.218+):
#   * mdxjs 1.0.4 → swc_core 27.0.6 → swc_common 12.0.1
#   * fervid → swc_core 35.0.0 → swc_common 14.0.4
# Once those upstream crates update to a version of swc_common that does
# not use `serde::__private`, this patch (and the `patches/serde` fork)
# can be removed.
[patch.crates-io]
serde = { path = "patches/serde" }
