[package]
name = "farmfe_benchmarks"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
farmfe_compiler = { version = "*", path = "../crates/compiler" }
farmfe_core = { version = "*", path = "../crates/core" }

[dev-dependencies]
criterion = { version = "2.9.1", package = "codspeed-criterion-compat" }

[[bench]]
name = "compiler"
harness = false
