[package]
name = "farmfe_bench"
version = "0.0.2"
edition = "2021"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
license = "MIT"
description = "Farm Bench"
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_bench"

[dependencies]
criterion2 = { version = "0.11.0", default-features = false }
farmfe_core = { path = "../core", version = "0.7.0" }
farmfe_compiler = { path = "../compiler", version = "0.0.12" }

[[bench]]
name = "compiler_bench"
harness = false

[features]
codspeed = ["criterion2/codspeed"]
