[package]
name = "farmfe_benches"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
farmfe_compiler = { version = "0.0.13", path = "../compiler" }
farmfe_core = { version = "0.7.1", path = "../core" }

[dev-dependencies]
criterion = { version = "2.9.1", package = "codspeed-criterion-compat" }

[[bench]]
name = "compiler"
harness = false
