[package]
name = "farmfe_compiler"
version = "0.0.1"
edition = "2021"

[dependencies]
farmfe_core = { path = "../core" }
farmfe_plugin_partial_bundling = { path = "../plugin_partial_bundling" }
farmfe_plugin_resolve = { path = "../plugin_resolve" }
farmfe_plugin_script = { path = "../plugin_script" }
farmfe_plugin_runtime = { path = "../plugin_runtime" }
farmfe_plugin_html = { path = "../plugin_html" }
farmfe_plugin_tree_shake = { path = "../plugin_tree_shake" }
farmfe_plugin_css = { path = "../plugin_css" }
farmfe_plugin_lazy_compilation = { path = "../plugin_lazy_compilation" }
farmfe_plugin_static_assets = { path = "../plugin_static_assets" }
farmfe_plugin_minify = { path = "../plugin_minify" }
farmfe_toolkit = { path = "../toolkit" }
farmfe_utils = { path = "../utils" }
farmfe_testing_helpers = { path = "../testing_helpers" }
farmfe_plugin_json = { path = "../plugin_json" }
farmfe_plugin_polyfill = { path = "../plugin_polyfill" }
farmfe_plugin_progress = { path = "../plugin_progress"}
farmfe_plugin_define = { path = "../plugin_define" }
num_cpus = "1.16.0"

[features]
profile = [
  "farmfe_core/profile",
  "farmfe_plugin_tree_shake/profile",
  "farmfe_plugin_resolve/profile",
  "farmfe_plugin_partial_bundling/profile",
]
swc_plugin = ["farmfe_plugin_script/swc_plugin"]
