[package]
name = "farmfe_compiler"
version = "0.0.17"
edition = "2021"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
license = "MIT"
description = "Farm Compiler"
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_compiler"

[dependencies]
farmfe_core = { path = "../core", version = "0.7.3" }
farmfe_plugin_partial_bundling = { path = "../plugin_partial_bundling", version = "0.0.15" }
farmfe_plugin_resolve = { path = "../plugin_resolve", version = "0.0.16" }
farmfe_plugin_script = { path = "../plugin_script", version = "0.0.15" }
farmfe_plugin_runtime = { path = "../plugin_runtime", version = "0.0.15" }
farmfe_plugin_html = { path = "../plugin_html", version = "0.0.15" }
farmfe_plugin_tree_shake = { path = "../plugin_tree_shake", version = "0.0.14" }
farmfe_plugin_css = { path = "../plugin_css", version = "0.0.17" }
farmfe_plugin_lazy_compilation = { path = "../plugin_lazy_compilation", version = "0.0.15" }
farmfe_plugin_static_assets = { path = "../plugin_static_assets", version = "0.0.15" }
farmfe_plugin_minify = { path = "../plugin_minify", version = "0.0.15" }
farmfe_toolkit = { path = "../toolkit", version = "0.0.17" }
farmfe_utils = { path = "../utils", version = "0.1.6" }
farmfe_testing_helpers = { path = "../testing_helpers", version = "0.0.17" }
farmfe_plugin_json = { path = "../plugin_json", version = "0.0.15" }
farmfe_plugin_polyfill = { path = "../plugin_polyfill", version = "0.0.15" }
farmfe_plugin_progress = { path = "../plugin_progress", version = "0.0.15" }
farmfe_plugin_define = { path = "../plugin_define", version = "0.0.15" }
farmfe_plugin_bundle = { path = "../plugin_bundle", version = "0.0.9" }
num_cpus = "1.16.0"
farmfe_testing = { path = "../macro_testing", version = "0.0.2" }

[features]
profile = [
  "farmfe_core/profile",
  "farmfe_plugin_tree_shake/profile",
  "farmfe_plugin_resolve/profile",
  "farmfe_plugin_partial_bundling/profile",
  "farmfe_plugin_runtime/profile",
]
swc_plugin = ["farmfe_plugin_script/swc_plugin"]
