[package]
name = "farmfe_core"
version = "0.7.1"
edition = "2021"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
license = "MIT"
description = "Core types and data structures for farm."
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_core"
readme = "README.md"

[package.metadata.docs.rs]
no-default-features = true

[dependencies]
farmfe_macro_cache_item = { version = "0.1.3", path = "../macro_cache_item" }
farmfe_utils = { version = "0.1.6", path = "../utils" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_regex = "1.1.0"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
relative-path = "1.7"
dashmap = "5.0"
blake2 = "0.10"
hex = "0.4"
rkyv = { version = "0.7.42" }
rkyv_dyn = "0.7.42"
rkyv_typename = "0.7.42"
ptr_meta = "0.1.4"
thiserror = "1.0"
rayon = "1.5"
petgraph = "0.6"
downcast-rs = "1.2"
wax = { version = "0.6", default-features = false, features = [
  "miette",
  "walk",
] }
globset = { version = "0.4.14" }
swc_ecma_ast = { version = "3.0.0", features = ["rkyv-impl", "serde-impl"] }
swc_ecma_parser = { version = "4.0.0" }
swc_common = { version = "3.0.0", features = [
  "concurrent",
  "sourcemap",
  "rkyv-impl",
] }
swc_css_ast = { version = "3.0.0", features = ["rkyv-impl"] }
swc_css_prefixer = { version = "3.0.0" }
swc_html_ast = { version = "3.0.0", features = ["rkyv-impl"] }
heck = "0.5.0"
puffin = { version = "0.19.1", features = [
  "packing",
  "lz4",
  "serialization",
], optional = true }
regex = "1.7.3"
enhanced-magic-string = { version = "0.1.0" }
rustc-hash = "2.0.0"

[features]
profile = ["dep:puffin"]
