[package]
name = "create-farm"
version = "0.1.5"
edition = "2021"
authors = ["Erkelost"]
license = "MIT"
description = "Create Farm cli tool"
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"


[[bin]]
name = "create-farm"
path = "src/main.rs"

[dependencies]
anyhow = "1"
dialoguer = "0.11"
rust-embed = { version = "8.3", features = [
  "compression",
  "interpolate-folder-path",
] }
clap = { version = "4.5.8", features = ["derive"] }
