[package]
name = "farmfe_macro_cache_item"
version = "0.0.2"
edition = "2021"
description = "Macro to create a farm cache item"
license = "MIT"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
