[package]
name = "farmfe_macro_cache_item"
version = "0.1.0"
edition = "2021"
description = "Macro to create a farm cache item"
license = "MIT"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
homepage = "https://farm-fe.github.io"
repository = "https://github.com/farm-fe/farm"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
