[package]
name = "farmfe_macro_cache_item"
version = "2.0.0"
edition = "2021"
description = "Macro to create a farm cache item"
license = "MIT"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2.0.104", features = ["full"] }
quote = "1"
