[package]
name = "farmfe_macro_plugin"
version = "2.0.1"
edition = "2024"
license = "MIT"
description = "macro for farm plugins"
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
readme = "README.md"

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"

[lib]
proc-macro = true
