[package]
name = "farmfe_testing"
version = "0.0.2"
edition = "2021"
authors = ["shulandmimi <sshuang141@163.com>"]
license = "MIT"
description = "Testing macro for farm."
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_testing"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]

proc-macro-error = "1.0.4"
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = "2.0.60"
glob = "0.3.1"
regex = "1.7.3"
heck = "0.4.1"
