[package]
edition = "2021"
name = "farmfe_node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.5.0", default-features = false, features = [
  "napi4",
  "async",
  "serde-json",
] }
napi-derive = "2.5.0"
farmfe_compiler = { path = "../compiler" }
farmfe_core = { path = "../core" }
farmfe_toolkit = { path = "../toolkit" }
regex = "1"
libloading = "0.7"
opentelemetry = { version = "0.18.0", default-features = false, features = [
  "trace",
], optional = true }
tracing-opentelemetry = { version = "0.18.0", optional = true }
opentelemetry-jaeger = { version = "0.17.0", optional = true }

[features]
profiler = [
  "dep:opentelemetry",
  "dep:tracing-opentelemetry",
  "dep:opentelemetry-jaeger",
]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
