[package]
edition = "2021"
name = "farmfe_node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.5.0", default-features = false, features = [
  "napi4",
  "serde-json",
] }
napi-derive = "2.5.0"
farmfe_compiler = { path = "../compiler" }
farmfe_core = { path = "../core" }
farmfe_toolkit = { path = "../toolkit" }
regex = "1"
libloading = "0.7"
farmfe_toolkit_plugin_types = { path = "../toolkit_plugin_types" }
eframe = { version = "0.24.1", default-features = false, features = [
  "persistence",
  "glow",
  "default_fonts",
], optional = true }
puffin_egui = { version = "0.24.0", optional = true }
notify = { version = "6.0.1" }

[features]
profile = [
  "dep:eframe",
  "dep:puffin_egui",
  "farmfe_core/profile",
  "farmfe_compiler/profile",
]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = true
opt-level = "z"
panic = "abort"
