[package]
edition = "2021"
name = "farmfe_node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.15.2", default-features = false, features = [
  "napi4",
  "serde-json",
] }
napi-derive = "2.15.2"
farmfe_compiler = { path = "../compiler" }
farmfe_core = { path = "../core" }
farmfe_toolkit = { path = "../toolkit" }
regex = "1"
libloading = "0.8.6"
eframe = { version = "0.24.1", default-features = false, features = [
  "persistence",
  "glow",
  "default_fonts",
], optional = true }
puffin_egui = { version = "0.24.0", optional = true }
notify = { version = "6.0.1", optional = true }

[features]
default = ["swc_plugin"]
profile = [
  "dep:eframe",
  "dep:puffin_egui",
  "farmfe_core/profile",
  "farmfe_compiler/profile",
]
swc_plugin = ["farmfe_compiler/swc_plugin"]
file_watcher = ["notify"]

[build-dependencies]
napi-build = "2.0.1"
