[package]
name = "farmfe_plugin_bundle"
version = "0.0.6"
edition = "2021"
authors = ["shulandmimi"]
license = "MIT"
description = "resource pot to bundle"
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_plugin_bundle"

[dependencies]
farmfe_core = { path = "../core", version = "0.7.0" }
farmfe_toolkit = { path = "../toolkit", version = "0.0.14" }
farmfe_testing_helpers = { path = "../testing_helpers", version = "0.0.14" }
farmfe_utils = { path = "../utils", version = "0.1.6" }

[features]
profile = ["farmfe_core/profile"]
