[package]
name = "farmfe_plugin_css"
version = "0.0.8"
edition = "2021"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
license = "MIT"
description = "Css plugin of farm."
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_plugin_css"

[dependencies]
farmfe_core = { path = "../core", version = "0.5.1" }
farmfe_toolkit = { path = "../toolkit", version = "0.0.8" }
farmfe_utils = { path = "../utils", version = "0.1.4" }
farmfe_macro_cache_item = { path = "../macro_cache_item", version = "0.1.3" }
rkyv = { version = "0.7.42" }

[dev-dependencies]
farmfe_testing_helpers = { path = "../testing_helpers", version = "0.0.8" }
