[package]
name = "farmfe_plugin_define"
version = "0.0.12"
edition = "2021"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
license = "MIT"
description = "Define plugin of farm."
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_plugin_define"

[dependencies]
farmfe_core = { path = "../core", version = "0.7.0" }
farmfe_toolkit = { path = "../toolkit", version = "0.0.14" }
farmfe_utils = { path = "../utils", version = "0.1.6" }
farmfe_testing_helpers = { path = "../testing_helpers", version = "0.0.14" }
