[package]
name = "farmfe_plugin_html"
version = "0.0.13"
edition = "2021"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
license = "MIT"
description = "Html plugin of farm."
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_plugin_html"

[dependencies]
farmfe_core = { path = "../core", version = "0.8.0" }
farmfe_toolkit = { path = "../toolkit", version = "0.0.15" }
farmfe_testing_helpers = { path = "../testing_helpers", version = "0.0.15" }
rkyv = { version = "0.7.42" }
