[package]
name = "farmfe_plugin_json"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
farmfe_core = { path = "../core", version = "0.3.0" }
farmfe_toolkit = { path = "../toolkit", version = "0.0.1" }
farmfe_testing_helpers = { path = "../testing_helpers", version = "0.0.1" }
