[package]
name = "farmfe_plugin_library"
version = "0.0.1"
edition = "2021"
authors = ["shulandmimi", "brightwwu"]
license = "MIT"
description = "Support bundling ESM/CJS modules into a pure ESM/CJS module for Farm, similar to Rollup/Esbuild."
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_plugin_library"

[dependencies]
farmfe_core = { path = "../core", version = "0.7.1" }
farmfe_toolkit = { path = "../toolkit", version = "0.0.15" }
farmfe_testing_helpers = { path = "../testing_helpers", version = "0.0.15" }
farmfe_utils = { path = "../utils", version = "0.1.6" }

[features]
profile = ["farmfe_core/profile"]
