[package]
name = "farmfe_plugin_lightningcss"
version = "0.0.1"
edition = "2021"
authors = ["madinah <maidang@felixwliu.cn>"]
license = "MIT"
description = "Lightningcss plugin of farm."
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_plugin_css"

[dependencies]
farmfe_core = { path = "../core", version = "0.7.0" }
farmfe_toolkit = { path = "../toolkit", version = "0.0.14" }
farmfe_utils = { path = "../utils", version = "0.1.6" }
farmfe_macro_cache_item = { path = "../macro_cache_item", version = "0.1.3" }
rkyv = { version = "0.7.42" }
lightningcss = "1.0.0-alpha.61"

[dev-dependencies]
farmfe_testing_helpers = { path = "../testing_helpers", version = "0.0.14" }
