[package]
name = "farmfe_plugin_mangle_exports"
version = "2.0.1"
edition = "2021"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
license = "MIT"
description = "Farm rust plugin for mangling exports for script modules"
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_plugin_script_meta"

[dependencies]
farmfe_core = { path = "../core", version = "3.0.0" }
farmfe_toolkit = { path = "../toolkit", version = "2.0.1" }
farmfe_testing_helpers = { path = "../testing_helpers", version = "2.0.1" }
farmfe_utils = { path = "../utils", version = "2.0.0" }
