[package]
name = "farmfe_plugin_progress"
version = "0.0.6"
edition = "2021"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
license = "MIT"
description = "Progress plugin of farm."
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_plugin_progress"

[dependencies]
farmfe_core = { path = "../core", version = "0.5.1" }
farmfe_testing_helpers = { path = "../testing_helpers", version = "0.0.8" }
indicatif = "0.17.7"
console = "0.15.8"
